[package]
name = "local_smoltcp"
version = "0.8.0"
edition = "2018"
authors = ["whitequark <whitequark@whitequark.org>"]
description = "Adapted version of smolt v0.8.0. Available at https://github.com/smoltcp-rs/smoltcp"
repository = "https://github.com/smoltcp-rs/smoltcp.git"
readme = "README.md"
keywords = ["ip", "tcp", "udp", "ethernet", "network"]
categories = ["embedded", "network-programming"]
license = "0BSD"
# Each example should have an explicit `[[example]]` section here to
# ensure that the correct features are enabled.
autoexamples = false

[dependencies]
managed = { version = "0.8", default-features = false, features = ["map"] }
byteorder = { version = "1.0", default-features = false }
log = { version = "0.4.4", default-features = false, optional = true }
libc = { version = "0.2.18", optional = true }
bitflags = { version = "1.0", default-features = false }
defmt = { version = "0.3", optional = true }
cfg-if = "1.0.0"
heapless = "0.7.8"

m3 = { path = "../../libs/rust/m3" }
base = { path = "../../libs/rust/base"}


[features]
std = ["managed/std", "defmt?/alloc"]
alloc = ["managed/alloc", "defmt?/alloc"]
verbose = []
"medium-ethernet" = ["socket"]
"medium-ip" = ["socket"]
"medium-ieee802154" = ["socket", "proto-sixlowpan"]

"phy-raw_socket" = ["std", "libc"]
"phy-tuntap_interface" = ["std", "libc", "medium-ethernet"]

"proto-ipv4" = []
"proto-igmp" = ["proto-ipv4"]
"proto-dhcpv4" = ["proto-ipv4"]
"proto-ipv6" = []
"proto-sixlowpan" = ["proto-ipv6"]

"socket" = []
"socket-raw" = ["socket"]
"socket-udp" = ["socket"]
"socket-tcp" = ["socket"]
"socket-icmp" = ["socket"]
"socket-dhcpv4" = ["socket", "medium-ethernet", "proto-dhcpv4"]

"async" = []

"ohua" = ["socket-tcp"]
"m3" = []




default = [
  "alloc",
  "log",
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw", "socket-udp", "socket-tcp",
  "ohua",
  "m3"
]
